@@ -16,6 +16,7 @@
  - Fix: Burning PP spies really does make planet unhappy.
  - Mod: Remove limit for number of plans created at a time in Arch. Min.
  - Fix: After flipping, layoff police.
+ - Add: Intel Min API: name_spies to mass-rename spies similar to WaX.
 
 3.0917:
  - Fix: Recalc stats when building 1+x plans.
